# python-project-setup

./: .coverage  .pre-commit-config.yaml  LICENSE  Makefile  README.md  __init__.py  environment.yml  environment_filtered.yml  main.py  project_setup_manager.py  pyproject.toml  requirements.txt
new_project_files/: requirements.txt
src/python_project_setup/: main.py
src/python_project_setup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/python_project_setup/new_project_files/: Makefile  __init__.py  environment.yml
tests/: test_project_setup_manager.py
utilities/results/: folder_structure.txt  pylint-results.txt  pytest-results.txt
