[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_project_setup"
version = "0.0.5"
authors = [
  { name="Schnock", email="schnock.art@gmail.com" },
]
description = "A package for setting up a new python project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
setup-python-project = "python_project_setup.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_project_setup = ["new_project_files/*", "logging.config"]

[project.urls]
Homepage = "https://github.com/schnock-art/python-project-setup"
Issues = "https://github.com/schnock-art/python-project-setup/issues"